updates
org.apache.logging.log4j to 2.20.0
versions-maven-plugin to 2.15.0
jakarta-inject-api to 2.1.0.MR
maven-assembly-plugin to 3.5.0
spring-boot to 3.0.3
spotbugs-maven-plugin to 4.7.3.2
add comments to turn off snyk warnings about logging
pmd to 6.55
checkstyle to 10.8.0
dependency-checkplugin to 8.1.2
maven-compiler-plugin to 3.11.0
spring-framework to 6.0.6